# OpenCLGameOfLife

./: CMakeLists.txt  GameOfLife.sln  README.md  VC10_win32.bat  main.cpp
GameOfLifeModule/: DLL_API.h  GameOfLifeModule.vcxproj  GameOfLifeModule.vcxproj.filters  Kernel.cl  OpenCLKernel.cpp  OpenCLKernel.h  resource.h
GameOfLifeTester/: GameOfLifeTester.vcxproj  main.cpp
apps/: CMakeLists.txt  main.cpp
gol/: CMakeLists.txt  DLL_API.h  Kernel.cl  OpenCLKernel.cpp  OpenCLKernel.h  resource.h
